--- a/style.css
+++ b/style.css
@@ -1,52 +1,59 @@
-body{
-text-align: center;
-margin-left: -15px;
-margin-right: -30px;
-background-color: 
 
-}
-#menu{
-    border: 2px solid white;
-    width: 100%;
+
+.nav-link{
+    font-size: 25px !important;
+    text-shadow:1px 1px white;
+    font-weight: bold;
+    color: black;
+    margin-right: -16px;
+    margin-left: -16px;
+    background-color: white;
+    border:2px solid black;
     border-left: none;
     border-right: none;
 }
-.nav-link{
-    font-size: 25px;
-     text-shadow:1px 1px white;
-      font-weight: bold;
-      color: black;
-}
-.text-primary{
-    font-size: 50px;
+.nav-link:hover, .nav-link:focus {
+  text-decoration: none;
 }
 
-@media Screen and (min-width: 991px){
-    #menu{
-        display: none;
-    }
+.nav-link.disabled {
+  color: #6c757d;
+  pointer-events: none;
+  cursor: default;
 }
-@media Screen and (max-width: 991px){
- .text-primary{
-    font-size: 200%;
- }
- h2{
-    font-size: 25px;
- }
 
- h1{
-    font-size: 35px;
+.bg-secondary{
+  border:2px solid white;
+  border-left: none;
+  border-right: none;
 }
+.col-xs-12{
+  font-size: 30px;
+  padding: 10px;
+  margin-top: 20px;
+  margin-bottom: 10px;
+  margin-left: -15px;
+  margin-right: -15px;
+
+}.text-white{
+  margin:30px;
 }
-@media (min-width: 767px) and (max-width: 991px)
-{
-    .navbar-toggler{
-     display: none;
-    }
+.text-center{
+  font-size:60px;
 }
-@media screen and (max-width: 766px)
-{
-    .navbar-toggler{
-     display:inline-block;
-    }
+.collapes{
+  margin-left: -15px;
+}
+.navbar{
+  margin-right: -15px;
+  margin-left: -15px;
+}
+.row{
+  margin-right: -15px;
+  margin-left: -15px;
+}
+@media (min-width: 991px){
+.navbar-nav{
+  display: none;
+}
 }
